--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -127,6 +127,13 @@
 
     </div>
 
+    <style>
+        .albatross {
+            padding: 0.25em 0.5em;
+            background-color: hsl( var(--hsl-ItemBackground) );
+        }
+    </style>
+
     <div class="albatross">
         <div>some loooong label</div>
         <div>short label</div>
