--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -331,8 +331,9 @@
             <section c-dev3>
                 <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
                 <figure>
-                    <a b href="https://material.io/tools/icons/?style=baseline"><i>Material Icons</i></a>
-                    <a href="https://simpleicons.org/"><i>Social</i></a>
+                    <a c href="https://material.io/tools/icons/?style=baseline"><i>Material</i></a>
+                    <a b href="https://icomoon.io/app/#/select"><i>icomoon</i></a>
+                    <a c href="https://simpleicons.org/"><i>brand</i></a>
                 </figure>
                 <figure>
                     <a href="http://fontawesome.io/icons/"><i>Font Awesome</i></a>
