font-size model

--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -14,7 +14,6 @@
 
     <style> /* ༼°▽°༽ boot style */
         body    { width: 100%; height: auto; overflow: hidden; }
-        body    { font-size: 16px; }
         img,svg { max-width: 100% }
     </style>
 
@@ -157,6 +156,44 @@
         <div class="title">swd section</div>
         <div class="title">swd section</div>
     </section>
+
+    <article class="swed-screen color-box colors-as-primary">
+        <hr>
+        <section class="article-grid">
+            <h1 class="big-title">Offer Details</h1>
+            <h2 class="title">Offer Details</h2>
+            <h3 class="min-title">Offer Details</h3>
+            <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <ul>
+                <li>To be eligible, users have to fill out the form available via QR code or the web link.</li>
+                <li class="text-as-bigger">The contest opens on Wednesday, July 17 at 08:00 and closes on Thursday, July 18 at 15:00 GMT+2.</li>
+                <li>The first prize will be drawn among all participants on July 18 at 15:15 GMT+2.</li>
+                <li>The winner of the first prize will be selected randomly and contacted via mobile number specified in the form.</li>
+            </ul>
+            <p class="text-as-bigger">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p class="text-as-smaller">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p class="text-as-regular">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+        </section>
+        <hr>
+        <section class="article-grid" style='font-family:"Roboto","Helvetica Neue", Arial, sans-serif;'>
+            <h1 class="big-title">Offer Details</h1>
+            <h2 class="title">Offer Details</h2>
+            <h3 class="min-title">Offer Details</h3>
+            <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p class="text-as-bigger">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p class="text-as-smaller">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <p class="text-as-regular">Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
+            <ul>
+                <li>To be eligible, users have to fill out the form available via QR code or the web link.</li>
+                <li>The contest opens on Wednesday, July 17 at 08:00 and closes on Thursday, July 18 at 15:00 GMT+2.</li>
+                <li>The first prize will be drawn among all participants on July 18 at 15:15 GMT+2.</li>
+                <li>The winner of the first prize will be selected randomly and contacted via mobile number specified in the form.</li>
+            </ul>
+        </section>
+        <hr>
+    </article>
 
 
     <section class="swed-screen">
