--- a/appZapp/design-eg-event.html
+++ b/appZapp/design-eg-event.html
@@ -14,7 +14,6 @@
 
     <style> /* ༼°▽°༽ boot style */
         body    { width: 100%; height: auto; overflow: hidden; }
-        body    { font-size: 20px; }
         img,svg { max-width: 100% }
     </style>
 
@@ -86,7 +85,7 @@
         /* ------------------------------------------------------ */
 
         .egvent-welcome-screen {
-            min-height:      100vh;
+            min-height:      80vh;
             display:         flex;
             flex-direction:  row;
             justify-content: space-between;
@@ -112,6 +111,9 @@
             align-content:   center;
             align-items:     center;
         }
+        .egvent-welcome-intro h1 {
+            font-size: 1.5em;
+        }
         .egvent-welcome-logo {
             max-width:  10em;
             padding-top: 2em;
@@ -128,11 +130,64 @@
             align-content:   center;
             align-items:     center;
         }
+        .egvent-details-screen {
+            min-height:      40vh;
+            display:         flex;
+            flex-direction:  row;
+            justify-content: space-between;
+            align-content:   stretch;
+            align-items:     stretch;
+
+          --background-color: white;
+          --color:            black;
+            background-color: var(--background-color);
+            color:            var(--color);
+        }
+        .egvent-details-texts {
+            flex-grow: 1;
+            padding:   2em 2em 2em 1em;
+
+            display:         flex;
+            flex-direction:  row;
+            justify-content: flex-end;
+            align-content:   center;
+            align-items:     center;
+
+          ---background-color: hsl(var(--hsl-egActionRed));
+          ---color:            white;
+            background-color: var(--background-color);
+            color:            var(--color);
+        }
+        .egvent-details-texts ul {
+            list-style-position: outside;
+        }
+        .egvent-details-texts li {
+            max-width: 26em;
+        }
+        .egvent-details-texts li+li {
+            margin-top: 1em;
+        }
+        .egvent-details-illustration {
+            flex-grow: 1;
+            padding:   2em;
+
+            display:         flex;
+            flex-direction:  column;
+            justify-content: center;
+            align-content:   center;
+            align-items:     center;
+        }
+        .egvent-details-illustration img {
+            max-width: 300px;
+        }
+
+
         .egvent-form {
             max-width: 22em;
         }
         .egvent-form-fields {
-            display: none;
+            min-height: 22em;
+            background-color: rgba(0,0,0,0.2);
         }
         .egvent-form-fields .form-control {
             display: block;
@@ -145,10 +200,10 @@
 </head>
 <body class="body-wrap design-template">
 
-    <article class="egvent-welcome-screen">
+    <div class="egvent-welcome-screen">
         <section class="egvent-welcome-intro">
             <div class="content-block">
-                <p>Enter an instant win giveaway<br>by <strong>SoftGamings</strong>.</p>
+                <h1>Enter an instant win giveaway<br>by <strong>SoftGamings</strong>.</h1>
                 <p>Guaranteed prizes for all participants<br>and a chance to win the first prize<br>— <strong>The Gold Coin!</strong></p>
                 <p><strong>Good luck!</strong></p>
                 <figure class="egvent-welcome-logo">
@@ -160,47 +215,31 @@
             <div class="content-block egvent-form">
                 <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
 
-
-<div role="form" class="wpcf7" id="wpcf7-f39752-p39217-o1" lang="en-US" dir="ltr"><div class="screen-reader-response"></div><form action="/qr/#wpcf7-f39752-p39217-o1" method="post" class="wpcf7-form" novalidate="novalidate"><div style="display: none;">
-<input type="hidden" name="_wpcf7" value="39752">
-<input type="hidden" name="_wpcf7_version" value="5.1.3">
-<input type="hidden" name="_wpcf7_locale" value="en_US">
-<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f39752-p39217-o1">
-<input type="hidden" name="_wpcf7_container_post" value="39217">
-<input type="hidden" name="g-recaptcha-response" value="03AOLTBLQ1eL9PPP26hi-gynzWNdG3s8wh8lD6jFGZ6dnsFYwq1cEzYWbbs4gHI_mkAKTCpLdiJAp6oh25XoxmFBpXYxWfBx5aSuONOnBZ-3wfq6gzwM4yuk5WHwRG4OUOC1HKuQFijdpnQ22NawZ9FBRxCb7u6jPGCnOi8lNG0ZR7x0_P36u3KtOHeaasZEcnoY3f8yHFtXdL25ROca85qEnECwEylwXrsz1KjKfF93Bt9QU3AXxCBWDRd6AQkFDzP-itVAnhsy5yPwIpsrb4PxWdImuFbtO2PkVWywdMR8G4qH-whrsnz17bQ-djsar6helS3SfhF3Hw"></div><div hidden="">
-<span class="wpcf7-form-control-wrap serial-prefix"><input type="hidden" name="serial-prefix" value="EV-CODE-231" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span></div>
-<section class="egvent-form-fields">
-    <div class="form-group">
-        <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" maxlength="250" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false" placeholder="Full Name *"></span></div>
-    <div class="form-group form-phone-group">
-        <div class="number"><span class="wpcf7-form-control-wrap your-phone"><input type="text" name="your-phone" value="" size="40" maxlength="250" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false" placeholder="Mobile Number *"></span></div>
-    </div>
-    <div class="form-group">
-        <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" maxlength="250" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email form-control" aria-required="true" aria-invalid="false" placeholder="Email *"></span></div>
-    <div class="form-group">
-        <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="3" class="wpcf7-form-control wpcf7-textarea form-control" aria-invalid="false" placeholder="Message (optional)"></textarea></span></div>
-    <div class="form-group">
-        <div><label for="your-business"><b>What is your relation to the gaming business *</b></label></div>
-        <div><span class="wpcf7-form-control-wrap your-business"><select name="your-business" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false"><option value="">---</option><option value="Affiliate">Affiliate</option><option value="Marketing professional">Marketing professional</option><option value="Online casino operator">Online casino operator</option><option value="Land-based casino operator">Land-based casino operator</option><option value="Software developer">Software developer</option><option value="Investor">Investor</option><option value="Payment provider">Payment provider</option><option value="Other">Other</option></select></span></div>
-    </div>
-    <div class="form-submitwrap">
-        <input type="submit" value="Submit" class="wpcf7-form-control wpcf7-submit button"><span class="ajax-loader"></span></div>
-    <div hidden="">
-        <span class="wpcf7-form-control-wrap dynamichidden-pageurl"><input type="hidden" name="dynamichidden-pageurl" value="https://test.softgamings.com:443/qr/" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-source"><input type="hidden" name="dynamichidden-utm-source" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-medium"><input type="hidden" name="dynamichidden-utm-medium" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-term"><input type="hidden" name="dynamichidden-utm-term" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-content"><input type="hidden" name="dynamichidden-utm-content" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-campaign"><input type="hidden" name="dynamichidden-utm-campaign" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-utm-ip"><input type="hidden" name="dynamichidden-utm-ip" value="87.99.94.34" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span><br>
-        <span class="wpcf7-form-control-wrap dynamichidden-refferer"><input type="hidden" name="dynamichidden-refferer" value="" size="40" class="wpcf7-form-control wpcf7dtx-dynamictext wpcf7-dynamichidden" aria-invalid="false"></span></div>
-</section>
-<div class="cContactForm__responce"><div class="wpcf7-response-output wpcf7-display-none"></div></div></form></div>
-
+                <div class="egvent-form-fields">
+                    
+                </div>
 
             </div>
         </section>
-    </article>
+    </div>
+    <div class="egvent-details-screen">
+        <section class="egvent-details-texts">
+            <div class="content-block">
+                <h2>Offer Details:</h2>
+                <ul>
+                    <li>To be eligible, users have to fill out the form available via QR code or the web link.</li>
+                    <li>The contest opens on Wednesday, July 17 at 08:00 and closes on Thursday, July 18 at 15:00 GMT+2.</li>
+                    <li>The first prize will be drawn among all participants on July 18 at 15:15 GMT+2.</li>
+                    <li>The winner of the first prize will be selected randomly and contacted via mobile number specified in the form.</li>
+                </ul>
+            </div>
+        </section>
+        <figure class="egvent-details-illustration">
+            <img src="https://www.softgamings.com/content/uploads/amsderdam-gold-coin-threesome.jpg" alt="Pamp fortuna gold 5g">
+            <figcaption><span>Pamp Fortuna Gold, 5g</span></figcaption>
+        </figure>
+    </div>
+
 
     <style>
         .egevent-intro {
