article-grid with css-vars

--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -75,6 +75,10 @@
 </head>
 <body class="body-wrap design-template--swed">
 
+    <style>
+        
+    </style>
+
     <div class="swed-screen color-box colors-as-primary">
 
         <section class="article-grid">
