--- a/appZapp/design-eg-event.html
+++ b/appZapp/design-eg-event.html
@@ -112,7 +112,8 @@
             align-items:     center;
         }
         .egvent-welcome-intro h1 {
-            font-size: 1.5em;
+            font-size:  1.5em;
+            line-height: 1.25;
         }
         .egvent-welcome-logo {
             max-width:  10em;
@@ -183,14 +184,7 @@
 
 
         .egvent-form {
-            max-width: 22em;
-        }
-        .egvent-form-fields {
-            min-height: 22em;
-            background-color: rgba(0,0,0,0.2);
-        }
-        .egvent-form-fields .form-control {
-            display: block;
+            max-width: 25em;
         }
 
     </style>
@@ -205,7 +199,7 @@
             <div class="content-block">
                 <h1>Enter an instant win giveaway<br>by <strong>SoftGamings</strong>.</h1>
                 <p>Guaranteed prizes for all participants<br>and a chance to win the first prize<br>— <strong>The Gold Coin!</strong></p>
-                <p><strong>Good luck!</strong></p>
+                <p>Good luck!</p>
                 <figure class="egvent-welcome-logo">
                     <img src="https://www.softgamings.com/content/themes/softgamings/images/design/softgamings-logo.svg" alt="Softgamings">
                 </figure>
@@ -215,8 +209,46 @@
             <div class="content-block egvent-form">
                 <p>Fill out the form, come to SoftGamings stand <strong>N1</strong>, and show us the winning page to get your prize straight away!</p>
 
-                <div class="egvent-form-fields">
-                    
+                <div>
+                    <div role="form" class="wpcf7" id="wpcf7-f1725-p9-o1" lang="en-US" dir="ltr">
+                        <div class="screen-reader-response"></div>
+                        <form action="/about-us/#wpcf7-f1725-p9-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+                            <div style="display: none;">
+                                <input type="hidden" name="_wpcf7" value="1725">
+                                <input type="hidden" name="_wpcf7_version" value="5.1.3">
+                                <input type="hidden" name="_wpcf7_locale" value="en_US">
+                                <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f1725-p9-o1">
+                                <input type="hidden" name="_wpcf7_container_post" value="9">
+                            </div>
+                            <div class="eg-contact-form-7--wrap-fields">
+                                <div class="field-wrap">
+                                    <label><span class="field-label">Full Name *</span><br>
+                                    <span class="wpcf7-form-control-wrap your-name"><input type="text" name="contact-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false"></span> </label>
+                                </div>
+                                <div class="field-wrap">
+                                    <label><span class="field-label">Mobile number *</span><br>
+                                    <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-phone" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false"></span>
+                                    <span class="field-label"><i><small>(will be used to reach winner of the first prize draw)</small></i></span></label>
+                                </div>
+                                <div class="field-wrap">
+                                    <label><span class="field-label">Email *</span><br>
+                                    <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email " aria-required="true" aria-invalid="false">
+                                    </span> </label>
+                                </div>
+                                <div class="field-wrap">
+                                    <label for="your-business"><span class="field-label">What is your relation to the gaming business *</span><br><span class="wpcf7-form-control-wrap your-business"><select name="your-business" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required form-control" aria-required="true" aria-invalid="false"><option value="">---</option><option value="Affiliate">Affiliate</option><option value="Marketing professional">Marketing professional</option><option value="Online casino operator">Online casino operator</option><option value="Land-based casino operator">Land-based casino operator</option><option value="Software developer">Software developer</option><option value="Investor">Investor</option><option value="Payment provider">Payment provider</option><option value="Other">Other</option></select></span> </label>
+                                </div>
+                                <div class="field-wrap">
+                                    <label><span class="field-label">Message <i>(optional)</i></span><br>
+                                    <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" rows="3" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false"></textarea></span> </label>
+                                </div>
+                                <div class="submit-wrap">
+                                    <input type="submit" value="Submit" class="wpcf7-form-control wpcf7-submit">
+                                    <span class="ajax-loader"></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
 
             </div>
